@@ -1,5 +1,9 @@
 package com.codewithben.Lofau.group.service.imp;
 
+import com.codewithben.Lofau.Post.dto.response.PostResponse;
+import com.codewithben.Lofau.Post.entity.Post;
+import com.codewithben.Lofau.Post.mapper.PostMapper;
+import com.codewithben.Lofau.Post.repository.PostRepository;
 import com.codewithben.Lofau.User.model.User;
 import com.codewithben.Lofau.User.userRepo.UserRepository;
 import com.codewithben.Lofau.group.dto.request.CreateGroupRequest;
@@ -26,8 +30,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -40,6 +46,9 @@ public class GroupServiceImpl implements GroupService {
     private final UserRepository userRepository;
     private final GroupMapper groupMapper;
     private final MediaService mediaService;
+    private final PostRepository postRepository;
+    private final PostMapper postMapper;
+
 
     @Override
     public GroupResponse createGroup(
@@ -74,51 +83,61 @@ public class GroupServiceImpl implements GroupService {
                 .name(request.getName())
                 .slug(slug)
                 .description(request.getDescription())
+
                 .visibility(request.getVisibility())
                 .category(request.getCategory())
+
                 .location(request.getLocation())
                 .latitude(request.getLatitude())
                 .longitude(request.getLongitude())
+
+                .website(request.getWebsite())
+                .email(request.getEmail())
+                .phoneNumber(request.getPhoneNumber())
+
+                .rules(request.getRules())
+
+                .allowMemberPosts(request.getAllowMemberPosts())
+                .requirePostApproval(request.getRequirePostApproval())
+                .allowMemberInvites(request.getAllowMemberInvites())
+
                 .createdBy(user)
+
                 .memberCount(1)
                 .postCount(0)
                 .verified(false)
+
                 .build();
 
         group = groupRepository.save(group);
 
-        // Upload profile image
+        /*
+         * Upload Profile Image
+         */
         if (profileImage != null && !profileImage.isEmpty()) {
 
-            List<MediaResponse> mediaResponses =
-                    mediaService.saveMedia(
-                            group.getId(),
-                            Collections.singletonList(profileImage),
-                            OwnerType.GROUP
-                    );
-
-            if (!mediaResponses.isEmpty()) {
-                group.setProfileImageUrl(mediaResponses.get(0).getUrl());
-            }
+            mediaService.uploadProfile(
+                    group.getId(),
+                    profileImage,
+                    OwnerType.GROUP
+            );
         }
 
-        // Upload cover image
+        /*
+         * Upload Cover Image
+         */
         if (coverImage != null && !coverImage.isEmpty()) {
 
-            List<MediaResponse> mediaResponses =
-                    mediaService.saveMedia(
-                            group.getId(),
-                            Collections.singletonList(coverImage),
-                            OwnerType.GROUP
-                    );
-
-            if (!mediaResponses.isEmpty()) {
-                group.setCoverImageUrl(mediaResponses.get(0).getUrl());
-            }
+            mediaService.uploadCover(
+                    group.getId(),
+                    coverImage,
+                    OwnerType.GROUP
+            );
         }
 
-        group = groupRepository.save(group);
-
+        /*
+         * Create Owner Membership
+         */
         GroupMember owner = GroupMember.builder()
                 .group(group)
                 .user(user)
@@ -221,6 +240,15 @@ public class GroupServiceImpl implements GroupService {
             groupRepository.save(group);
         }
 
+        group.setMemberCount(
+                (int) groupMemberRepository.countByGroupAndStatus(
+                        group,
+                        MemberStatus.APPROVED
+                )
+        );
+
+        groupRepository.save(group);
+
         return groupMapper.toResponse(group);
     }
 
@@ -259,6 +287,13 @@ public class GroupServiceImpl implements GroupService {
                 Math.max(0, group.getMemberCount() - 1)
         );
 
+        group.setMemberCount(
+                (int) groupMemberRepository.countByGroupAndStatus(
+                        group,
+                        MemberStatus.APPROVED
+                )
+        );
+
         groupRepository.save(group);
     }
 
@@ -274,15 +309,20 @@ public class GroupServiceImpl implements GroupService {
         return members.stream()
                 .map(member -> GroupMemberResponse.builder()
                         .userId(member.getUser().getId())
-                        .username(member.getUser().getUsername())
+                        .username(member.getUser().getDisplayUsername())
                         .firstName(member.getUser().getFirstName())
                         .lastName(member.getUser().getLastName())
-                        .profileImage(member.getUser().getProfilePictureUrl())
+                        .profileImage(
+                                mediaService.getProfile(
+                                        member.getUser().getId(),
+                                        OwnerType.USER
+                                )
+                        )
                         .role(member.getRole())
                         .status(member.getStatus())
                         .joinedAt(member.getJoinedAt())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -300,10 +340,15 @@ public class GroupServiceImpl implements GroupService {
         return requests.stream()
                 .map(member -> GroupMemberResponse.builder()
                         .userId(member.getUser().getId())
-                        .username(member.getUser().getUsername())
+                        .username(member.getUser().getDisplayUsername())
                         .firstName(member.getUser().getFirstName())
                         .lastName(member.getUser().getLastName())
-                        .profileImage(member.getUser().getProfilePictureUrl())
+                        .profileImage(
+                                mediaService.getProfile(
+                                        member.getUser().getId(),
+                                        OwnerType.USER
+                                )
+                        )
                         .role(member.getRole())
                         .status(member.getStatus())
                         .joinedAt(member.getJoinedAt())
@@ -312,7 +357,10 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public void approveJoinRequest(String groupId, Long userId) {
+    public void approveJoinRequest(
+            String groupId,
+            UUID userId
+    ) {
 
         Group group = groupRepository.findById(UUID.fromString(groupId))
                 .orElseThrow(() -> new RuntimeException("Group not found"));
@@ -335,11 +383,13 @@ public class GroupServiceImpl implements GroupService {
         );
 
         groupRepository.save(group);
-
     }
 
     @Override
-    public void rejectJoinRequest(String groupId, Long userId) {
+    public void rejectJoinRequest(
+            String groupId,
+            UUID userId
+    ) {
 
         Group group = groupRepository.findById(UUID.fromString(groupId))
                 .orElseThrow(() -> new RuntimeException("Group not found"));
@@ -351,24 +401,26 @@ public class GroupServiceImpl implements GroupService {
                 .orElseThrow(() -> new RuntimeException("Request not found"));
 
         groupMemberRepository.delete(member);
-
     }
     private GroupMember getMember(
             Group group,
-            Long userId
+            UUID userId
     ) {
 
         return groupMemberRepository
-                .findByGroupIdAndUserId(group.getId(), userId)
+                .findByGroupIdAndUserId(
+                        group.getId(),
+                        userId
+                )
                 .orElseThrow(() ->
                         new RuntimeException("Member not found"));
-
     }
+
 
     @Override
     public void promoteToAdmin(
             String groupId,
-            Long userId
+            UUID userId
     ) {
 
         Group group = groupRepository.findById(
@@ -389,13 +441,12 @@ public class GroupServiceImpl implements GroupService {
         member.setRole(GroupRole.ADMIN);
 
         groupMemberRepository.save(member);
-
     }
 
     @Override
     public void demoteAdmin(
             String groupId,
-            Long userId
+            UUID userId
     ) {
 
         Group group = groupRepository.findById(
@@ -416,13 +467,12 @@ public class GroupServiceImpl implements GroupService {
         member.setRole(GroupRole.MEMBER);
 
         groupMemberRepository.save(member);
-
     }
 
     @Override
     public void removeMember(
             String groupId,
-            Long userId
+            UUID userId
     ) {
 
         Group group = groupRepository.findById(
@@ -450,14 +500,15 @@ public class GroupServiceImpl implements GroupService {
         );
 
         groupRepository.save(group);
-
     }
 
     @Override
     public GroupResponse updateGroup(
             String groupId,
-            UpdateGroupRequest request
-    ) {
+            UpdateGroupRequest request,
+            MultipartFile profileImage,
+            MultipartFile coverImage
+    ) throws IOException {
 
         Group group = groupRepository.findById(
                         UUID.fromString(groupId))
@@ -474,6 +525,9 @@ public class GroupServiceImpl implements GroupService {
             );
         }
 
+        /*
+         * Basic Information
+         */
         if (request.getName() != null &&
                 !request.getName().isBlank()) {
 
@@ -484,36 +538,247 @@ public class GroupServiceImpl implements GroupService {
             if (groupRepository.existsBySlug(slug)
                     && !slug.equals(group.getSlug())) {
 
-                slug = slug + "-" + System.currentTimeMillis();
-
+                slug += "-" + System.currentTimeMillis();
             }
 
             group.setSlug(slug);
-
         }
 
-        if (request.getDescription() != null)
+        if (request.getDescription() != null) {
             group.setDescription(request.getDescription());
+        }
 
-        if (request.getVisibility() != null)
+        /*
+         * Visibility
+         */
+        if (request.getVisibility() != null) {
             group.setVisibility(request.getVisibility());
+        }
 
-        if (request.getCategory() != null)
+        if (request.getCategory() != null) {
             group.setCategory(request.getCategory());
+        }
 
-        if (request.getLocation() != null)
+        /*
+         * Location
+         */
+        if (request.getLocation() != null) {
             group.setLocation(request.getLocation());
+        }
 
-        if (request.getLatitude() != null)
+        if (request.getLatitude() != null) {
             group.setLatitude(request.getLatitude());
+        }
 
-        if (request.getLongitude() != null)
+        if (request.getLongitude() != null) {
             group.setLongitude(request.getLongitude());
+        }
 
-        groupRepository.save(group);
+        /*
+         * Contact Information
+         */
+        if (request.getWebsite() != null) {
+            group.setWebsite(request.getWebsite());
+        }
+
+        if (request.getEmail() != null) {
+            group.setEmail(request.getEmail());
+        }
+
+        if (request.getPhoneNumber() != null) {
+            group.setPhoneNumber(request.getPhoneNumber());
+        }
+
+        /*
+         * Rules
+         */
+        if (request.getRules() != null) {
+            group.setRules(request.getRules());
+        }
+
+        /*
+         * Settings
+         */
+        if (request.getAllowMemberPosts() != null) {
+            group.setAllowMemberPosts(request.getAllowMemberPosts());
+        }
+
+        if (request.getRequirePostApproval() != null) {
+            group.setRequirePostApproval(request.getRequirePostApproval());
+        }
+
+        if (request.getAllowMemberInvites() != null) {
+            group.setAllowMemberInvites(request.getAllowMemberInvites());
+        }
+
+        /*
+         * Images
+         */
+        if (profileImage != null && !profileImage.isEmpty()) {
+
+            mediaService.uploadProfile(
+                    group.getId(),
+                    profileImage,
+                    OwnerType.GROUP
+            );
+        }
+
+        if (coverImage != null && !coverImage.isEmpty()) {
+
+            mediaService.uploadCover(
+                    group.getId(),
+                    coverImage,
+                    OwnerType.GROUP
+            );
+        }
+
+        group.setUpdatedAt(LocalDateTime.now());
+
+        group = groupRepository.save(group);
 
         return groupMapper.toResponse(group);
+    }
+    private GroupMember getAdminMember(
+            Group group,
+            User user
+    ) {
 
+        GroupMember member = groupMemberRepository
+                .findByGroupAndUser(group, user)
+                .orElseThrow(() ->
+                        new RuntimeException(
+                                "You are not a member of this group."
+                        ));
+
+        if (member.getRole() != GroupRole.OWNER
+                && member.getRole() != GroupRole.ADMIN) {
+
+            throw new RuntimeException(
+                    "Only group owners or admins can perform this action."
+            );
+        }
+
+        return member;
+    }
+
+    @Override
+    public PostResponse pinPost(
+            UUID groupId,
+            UUID postId
+    ) {
+
+        Authentication authentication =
+                SecurityContextHolder.getContext().getAuthentication();
+
+        if (authentication == null) {
+            throw new RuntimeException("User not authenticated");
+        }
+
+        String email = authentication.getName();
+
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() ->
+                        new RuntimeException("User not found"));
+
+        Group group = groupRepository.findById(groupId)
+                .orElseThrow(() ->
+                        new RuntimeException("Group not found"));
+
+        // Verify user is OWNER or ADMIN
+        getAdminMember(group, user);
+
+        Post post = postRepository.findById(postId)
+                .orElseThrow(() ->
+                        new RuntimeException("Post not found"));
+
+        // Ensure the post belongs to this group
+        if (post.getGroup() == null
+                || !post.getGroup().getId().equals(groupId)) {
+
+            throw new RuntimeException(
+                    "This post does not belong to this group."
+            );
+        }
+
+        // Unpin any currently pinned post
+        Optional<Post> existingPinned =
+                postRepository.findByGroupAndPinnedTrueAndDeletedFalse(group);
+
+        if (existingPinned.isPresent()) {
+
+            Post pinnedPost = existingPinned.get();
+
+            if (!pinnedPost.getId().equals(post.getId())) {
+
+                pinnedPost.setPinned(false);
+                pinnedPost.setPinnedAt(null);
+
+                postRepository.save(pinnedPost);
+            }
+        }
+
+        // If already pinned, return it
+        if (Boolean.TRUE.equals(post.getPinned())) {
+            return postMapper.toResponse(post);
+        }
+
+        post.setPinned(true);
+        post.setPinnedAt(LocalDateTime.now());
+
+        Post savedPost = postRepository.save(post);
+
+        return postMapper.toResponse(savedPost);
+    }
+
+    @Override
+    public PostResponse unpinPost(
+            UUID groupId,
+            UUID postId
+    ) {
+
+        Authentication authentication =
+                SecurityContextHolder.getContext().getAuthentication();
+
+        if (authentication == null) {
+            throw new RuntimeException("User not authenticated");
+        }
+
+        String email = authentication.getName();
+
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() ->
+                        new RuntimeException("User not found"));
+
+        Group group = groupRepository.findById(groupId)
+                .orElseThrow(() ->
+                        new RuntimeException("Group not found"));
+
+        // Verify OWNER or ADMIN
+        getAdminMember(group, user);
+
+        Post post = postRepository.findById(postId)
+                .orElseThrow(() ->
+                        new RuntimeException("Post not found"));
+
+        if (post.getGroup() == null
+                || !post.getGroup().getId().equals(groupId)) {
+
+            throw new RuntimeException(
+                    "This post does not belong to this group."
+            );
+        }
+
+        // Already unpinned
+        if (!Boolean.TRUE.equals(post.getPinned())) {
+            return postMapper.toResponse(post);
+        }
+
+        post.setPinned(false);
+        post.setPinnedAt(null);
+
+        post = postRepository.save(post);
+
+        return postMapper.toResponse(post);
     }
 
     @Override
